# binja-msvc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  __init__.py  plugin.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: binaryninja-api-headless.patch
.github/workflows/: build.yaml  codeql.yml  release.yaml
docs/: info.md
include/: base_class_array.h  base_class_descriptor.h  class_heirarchy_descriptor.h  class_hierarchy_descriptor.h  constructor.h  object_locator.h  rtti.h  type_descriptor.h  utils.h  virtual_function.h  virtual_function_table.h
llvm-demangle/: CMakeLists.txt
llvm-demangle/include/: Demangle.h  DemangleConfig.h  MicrosoftDemangle.h  MicrosoftDemangleNodes.h  StringView.h  Utility.h
llvm-demangle/lib/: MicrosoftDemangle.cpp  MicrosoftDemangleNodes.cpp
scripts/: class_dump.py  class_graph.py  class_graphviz.py  class_traverser.py  class_types.py
src/: base_class_array.cpp  base_class_descriptor.cpp  class_heirarchy_descriptor.cpp  class_hierarchy_descriptor.cpp  constructor.cpp  object_locator.cpp  plugin.cpp  rtti.cpp  type_descriptor.cpp  utils.cpp  virtual_function.cpp  virtual_function_table.cpp
test/bins/: constructor.cpp  exceptions.cpp  overrides.cpp  simple.cpp
