[tool.poetry]
name = "binja-msvc"
version = "0.1.0"
description = ""
authors = ["Mason Reed <mason@vector35.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pyside6 = "^6.7.3"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

